# demo-snapshottest-update-bug

./: README.md  pyproject.toml  test  test_snapshot_update.py
snapshots/: snap_test_snapshot_update.py
