[tool.poetry]
name = "demo-snapshottest-update-bug"
version = "0.1.0"
description = ""
authors = ["Brett Higgins <brett.higgins@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
nose = "^1.3.7"
snapshottest = "^0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
